# SemVulGuard

./: .gitignore  DATA_AVAILABILITY.md  GITHUB_READY_REPORT.md  GITHUB_UPLOAD_CHECKLIST.md  LICENSE  README.md  REPRODUCING_EXPERIMENTS.md  pyproject.toml  requirements-dev.txt  requirements-eval.txt  requirements-models.txt  requirements.txt
SemVulGuard/paper/: experiment_claims.md  method_positioning.md  paper_claim_boundary.md  paper_tables.md  section4_experiment_outline.md
artifacts/paper_release_data/: DATA_DICTIONARY.md  FINAL_PACKAGE_REPORT.md  LICENSE_NOTE.md  PACKAGE_COMPLETE.md  README.md  RELEASE_STATUS.md  REPRODUCIBILITY.md  checksums_sha256.txt
configs/: dataset.yaml  eval.yaml  llm.yaml  static.yaml  train.yaml
scripts/: llm_topk_analysis.py
scripts/experiments/: build_subsets.py  codeql_devign_map.py  codeql_devign_wrap.py  cost_preview.py  normalize_devign.py  run_devign_codeql.py  run_devign_codeql_sklearn.py  run_mock.py  run_real.py  runner.py  validate_readiness.py
semvulguard/: __init__.py
semvulguard/dataset/: __init__.py  base.py  bigvul.py  build.py  dedup.py  devign.py  diversevul.py  split.py
semvulguard/eval/: __init__.py  ablation.py  classification.py  cost.py  localization.py  ranking.py  run.py
semvulguard/features/: __init__.py  build.py  graph_features.py  line_map.py  tokenizer.py
semvulguard/llm/: __init__.py  client.py  config.py  cost.py  evidence.py  mock.py  packet.py  parser.py  prompt_builder.py  prompt_templates.py  prompts.py  retry.py  verifier.py  verify.py
semvulguard/report/: build.py  (+3 more)
tests/: conftest.py
(+168 files in other folders)
