[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "semvulguard"
version = "0.1.0"
description = "SemVulGuard: Static-Analysis-Grounded Vulnerability Detection with Code Representation Learning and LLM-Based Semantic Verification."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2,<3",
    "pyyaml>=6",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]
# Code representation learning. torch is required to run the encoder/ranker;
# transformers and torch_geometric are optional and the code degrades to
# fallback modes when they are absent.
models = [
    "torch>=2.0",
    "numpy>=1.24",
]
models-full = [
    "torch>=2.0",
    "numpy>=1.24",
    "transformers>=4.30",
    "torch_geometric>=2.4",
]
# scikit-learn is used lazily by the evaluation harness for ROC-AUC / PR-AUC;
# the metrics fall back to None when it is absent, so it is optional.
eval = [
    "scikit-learn>=1.1",
]

[tool.setuptools.packages.find]
include = ["semvulguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
